# mythos

./: Cargo.toml  README.md  build.rs  x86_64-kernel.json
.cargo/: config.toml
assets/: foreground.tsx  launcher.level  launcher.tmx  launcher_foreground.csv  mario.data
assets/launcher/: foreground_tiles.data
drivers/ata/: Cargo.toml
drivers/ata/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: elf_loader.rs  game.rs  graphics.rs  idt.rs  interrupt.rs  logger.rs  main.rs  memory.rs  program.rs  screen.rs  userspace.rs
libraries/ata/: Cargo.toml
libraries/ata/src/: lib.rs
libraries/kernel-common/: Cargo.toml
libraries/kernel-common/src/: graphics.rs  lib.rs
libraries/level/: Cargo.toml
libraries/level/src/: archive.rs  lib.rs
libraries/mbr/: Cargo.toml
libraries/mbr/src/: error.rs  lib.rs  partition.rs
libraries/pack-u64/: Cargo.toml
libraries/std/: Cargo.toml
libraries/std/src/: lib.rs  screen.rs
libraries/uniquelock/: Cargo.toml
libraries/uniquelock/src/: lib.rs
os-runner/: Cargo.toml
os-runner/src/: add_disk_partition.rs  main.rs
programs/: build_user_partition.sh
programs/raytrace/: Cargo.toml
programs/raytrace/src/: main.rs
src/: elf_loader.rs  filesystem.rs  font.data  graphics.rs  idt.rs  logger.rs  main.rs  memory.rs  program.rs  screen.rs  userspace.rs
toolchain/: README.md  compiler.patch  config.toml  library.patch
toolchain/mythos/: mod.rs
toolchain/spec/: mythos_base.rs  x86_64_unknown_mythos.rs
userspace/: Cargo.toml
userspace/src/: main.rs  screen.rs
