[workspace]
members = [
    "kernel",
    "drivers/ata",
    "libraries/kernel-common",
    "libraries/mbr",
    "libraries/std",
    "libraries/uniquelock",
    "programs/raytrace",
]

[package]
name = "marios"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = false

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
# ovmf-prebuilt = "0.1.0-alpha.1"
