[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
bootloader_api = "0.11"
x86_64 = "0.14"
pic8259 = "0.10"
pc-keyboard = "0.6"
xmas-elf = "0.9"
fat32 = "0.2"

linked_list_allocator = "0.10"

ata = { path = "../drivers/ata" }
kernel-common = { path = "../libraries/kernel-common" }
mbr = { path = "../libraries/mbr" }
uniquelock = { path = "../libraries/uniquelock" }
